--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,20 @@
 .text-center{
     text-align:center;
 }
+
+table {
+    border:1px solid black;
+    width: 60%;
+}
+
+
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 10px;
+  }
+
+
+  tr:nth-child(even) {
+    background-color: #dddddd;
+  }
